--- a/languages/wbb-offcanvas-menu-nl_NL.po
+++ b/languages/wbb-offcanvas-menu-nl_NL.po
@@ -1,11 +1,11 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: wbb-offcanvasmenu-plugin\n"
-"POT-Creation-Date: 2015-08-18 17:02+0200\n"
-"PO-Revision-Date: 2015-08-18 17:03+0200\n"
+"Project-Id-Version: wbb-offcanvas-menu\n"
+"POT-Creation-Date: 2015-08-19 08:42+0200\n"
+"PO-Revision-Date: 2015-08-19 08:46+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: es_ES\n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: admin/class-wbb-ocm-admin.php:94
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Instellingen"
 
 #: admin/class-wbb-ocm-admin.php:121
 msgid "Off Canvas Menu"
@@ -26,124 +26,110 @@ msgstr "Off Canvas Menu"
 
 #: admin/partials/wbb-ocm-admin-display.php:22
 msgid "Status"
-msgstr "Estado"
+msgstr "Status"
 
 #: admin/partials/wbb-ocm-admin-display.php:27
 msgid "On"
-msgstr "On"
+msgstr "Op"
 
 #: admin/partials/wbb-ocm-admin-display.php:28
 msgid "Off"
-msgstr "Off"
+msgstr "Uit"
 
 #: admin/partials/wbb-ocm-admin-display.php:34
 #: admin/partials/wbb-ocm-admin-display.php:38
 msgid "activated"
-msgstr "activado"
+msgstr "Geactiveerd"
 
 #: admin/partials/wbb-ocm-admin-display.php:36
 #: admin/partials/wbb-ocm-admin-display.php:38
 msgid "deactivated"
-msgstr "desactivado"
+msgstr "Gedeactiveerd"
 
 #: admin/partials/wbb-ocm-admin-display.php:40
-msgid ""
-"The admins always will see the menu, to check the style before activate."
-msgstr ""
-"Los administradores siempre podrán ver el menú, para comprobar el estilo "
-"antes de activar."
+msgid "The admins always will see the menu, to check the style before activate."
+msgstr "De admins altijd ziet het menu, om te controleren de stijl voordat activeren."
 
 #: admin/partials/wbb-ocm-admin-display.php:46
 msgid "Menu and devices options"
-msgstr "Menú y opciones de dispositivo"
+msgstr "Opties menu en apparaten"
 
 #: admin/partials/wbb-ocm-admin-display.php:51
 msgid "Menu Name"
-msgstr "Nombre del menú"
+msgstr "Naam"
 
 #: admin/partials/wbb-ocm-admin-display.php:70
 msgid "Select the device where the menu will be visible"
-msgstr "Seleccione el dispositivo donde será visible el menú"
+msgstr "Select the device where the menu will be visible"
 
 #: admin/partials/wbb-ocm-admin-display.php:94
 msgid "Sidebar options"
-msgstr "Opciones de la Barra lateral:"
+msgstr "Gevorderde opties"
 
 #: admin/partials/wbb-ocm-admin-display.php:99
 msgid "Sidebar position"
-msgstr "Posición del la barra lateral"
+msgstr "Sidebar aanmaken"
 
 #: admin/partials/wbb-ocm-admin-display.php:101
 msgid "Left"
-msgstr "Izquierda"
+msgstr "Left"
 
 #: admin/partials/wbb-ocm-admin-display.php:102
 msgid "Right"
-msgstr "Derecha"
+msgstr "Right"
 
 #: admin/partials/wbb-ocm-admin-display.php:107
 msgid "Select Font Family"
-msgstr "Seleccionar fuente"
+msgstr "Selecteer Bericht soort"
 
 #: admin/partials/wbb-ocm-admin-display.php:125
 msgid "Background"
-msgstr "Fondo"
+msgstr "Background"
 
 #: admin/partials/wbb-ocm-admin-display.php:129
 msgid "Background on mouse over"
-msgstr "Fondo en mouse over"
+msgstr "Background on mouse over"
 
 #: admin/partials/wbb-ocm-admin-display.php:133
 msgid "Borders"
-msgstr "Bordes"
+msgstr "Randen"
 
 #: admin/partials/wbb-ocm-admin-display.php:137
 msgid "Font color"
-msgstr "Color de la fuente"
+msgstr "Kleur pictogram"
 
 #: admin/partials/wbb-ocm-admin-display.php:143
 msgid "Font color on mouse over"
-msgstr "Color de la fuente en mouse over"
+msgstr "Font color on mouse over"
 
 #: admin/partials/wbb-ocm-admin-display.php:153
 msgid "Trigger button options"
-msgstr "Opciones del botón lanzador"
+msgstr "Gevorderde opties"
 
 #: admin/partials/wbb-ocm-admin-display.php:159
-msgid ""
-"ID or Class (css selector) where the push menu trigger button will appear."
-msgstr "ID o clase (selector css)  donde el botón lanzador aparecerá"
+msgid "ID or Class (css selector) where the push menu trigger button will appear."
+msgstr "ID or Class (css selector) where the push menu trigger button will appear."
 
 #: admin/partials/wbb-ocm-admin-display.php:164
 msgid "Button position"
-msgstr "Posición del botón"
+msgstr "Button position"
 
 #: admin/partials/wbb-ocm-admin-display.php:174
 msgid "Select the trigger button icon"
-msgstr "Seleccione el icono del botón lanzador"
+msgstr "Select the trigger button icon"
 
 #: admin/partials/wbb-ocm-admin-display.php:192
 msgid "Upload your icon"
-msgstr "Suba su icono"
+msgstr "Upload your icon"
 
 #: admin/partials/wbb-ocm-admin-display.php:196
 msgid "Trigger button background"
-msgstr "Color de fondo del lanzador"
+msgstr "Trigger button background"
 
 #: admin/partials/wbb-ocm-admin-display.php:199
 msgid "Icon preview:"
-msgstr "Vista previa del icono"
+msgstr ""
 
 #: admin/partials/wbb-ocm-admin-display.php:210
 msgid "Update"
-msgstr "Actualizar"
-
-#~ msgid "Select the devices screen where the menu will be available"
-#~ msgstr ""
-#~ "Seleccione la pantalla de los dispositivos donde el menú estará disponible"
-
-#~ msgid "Sidebar side"
-#~ msgstr "Lado donde aparecerá la barra lateral"
-
-#~ msgid "Trigger button side"
-#~ msgstr "Lado en el que aparecerá el botón lanzador"
+msgstr ""
